--- a/dashboard/cariMateri.html
+++ b/dashboard/cariMateri.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <eta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page title</title>
-    <link href="bootstrapes/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrapes/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -291,8 +291,8 @@
             </div>
             
             <div style="display:grid; grid-template-columns: 1fr 1fr;" style="color: #6578B2;">
-                <div class="card-hover" style="border: 1px solid #ddd; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); display: grid; grid-template-columns: 80px 1fr; padding: 10px; border-radius: 8px; height:fit-content; width:350px; margin-bottom:40px;">
-                    <img src="media/idea.png" style="width: 80px; height: 80px; border-radius: 8px;">
+                <div class="card-hover" style="border: 1px solid #ddd; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); display: grid; grid-template-columns: 80px 1fr; padding: 10px; border-radius: 8px; height:fit-content; width:350px; margin-bottom:40px;"> 
+                    <img src="../image/idea.png" style="width: 80px; height: 80px; border-radius: 8px;">
                     <div>
                         <h3>Otodu For Sigma</h3>
                         <h5 style="background-color: #dbe4ea; border: 1px solid #ddd; border-radius: 20px; width: fit-content; padding: 5px;">Semua Kelas</h5>
@@ -301,7 +301,7 @@
                 </div>
 
                 <div class="card-hover" style="border: 1px solid #ddd; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); display: grid; grid-template-columns: 80px 1fr; padding: 10px; border-radius: 8px; height:fit-content; width:350px;">
-                    <img src="media/focus.png" style="width: 80px; height: 80px; border-radius: 8px;">
+                    <img src="../image/focus.png" style="width: 80px; height: 80px; border-radius: 8px;">
                     <div>
                         <h3>Otodu For General</h3>
                         <h5 style="background-color: #dbe4ea; border: 1px solid #ddd; border-radius: 20px; width: fit-content; padding: 5px;">Semua Kelas</h5>
@@ -309,7 +309,7 @@
                     </div>
                 </div>
                 <div class="card-hover" style="border: 1px solid #ddd; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); display: grid; grid-template-columns: 80px 1fr; padding: 10px; border-radius: 8px; height:fit-content; width:350px;">
-                    <img src="media/growth.png" style="width: 80px; height: 80px; border-radius: 8px;">
+                    <img src="../image/growth.png" style="width: 80px; height: 80px; border-radius: 8px;">
                     <div>
                         <h3>Lorem Ipsum</h3>
                         <h5 style="background-color: #dbe4ea; border: 1px solid #ddd; border-radius: 20px; width: fit-content; padding: 5px;">Semua Kelas</h5>
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <div class="card-hover" style="border: 1px solid #ddd; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); display: grid; grid-template-columns: 80px 1fr; padding: 10px; border-radius: 8px; height:fit-content; width:350px;">
-                    <img src="media/motivation.png" style="width: 80px; height: 80px; border-radius: 8px;">
+                    <img src="../image/motivation.png" style="width: 80px; height: 80px; border-radius: 8px;">
                     <div>
                         <h3>Lorem Ipsum</h3>
                         <h5 style="background-color: #dbe4ea; border: 1px solid #ddd; border-radius: 20px; width: fit-content; padding: 5px;">Semua Kelas</h5>
