--- a/dashboard/nlp.html
+++ b/dashboard/nlp.html
@@ -113,6 +113,6 @@ Get developer-friendly React or HTML/CSS code for this project at: https://proje
       </div>
       <script src="launchpad-js/launchpad-banner.js" async></script>
       <script defer src="https://animaapp.s3.amazonaws.com/static/restart-btn.min.js"></script>
-      <script src="script.js"></script>
+      <script src="nlp.js"></script>
   </body>
 </html>
