ganti gambar footer

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
     </div>
     <footer id="footer" class="mt-5">
       <div class="container py-5" style="font-family: Martian Mono;">
-        <img src="image/logo.png" alt=""> <span class="text-white px-5">@2024 OTODU Limited</span>
+        <img src="image/logo otodu terang.png" alt="logo" style="width: 10vw; margin-left: 2.3vw;">> 
+        <span class="text-white" style="font-family: 'Martian Mono'; font-size: 0.8vw; margin-top: 3vh;">@2024 OTODU Limited</span>
       </div>
     </footer>
     
