Menambahkan gambar 'The Founding Fathers' di landing page

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col d-flex justify-content-center ">
             <div class="card text-center border-0 mb-3 shadow" style="width: 16rem;">
               <div class="card-body">
-                <img src="img/profile.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" alt="">
+                <img src="image/anugrah.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" style="object-fit: cover;" alt="">
                 <h5 style="font-weight: 600;" class="card-title mb-3 mt-4">Anugrah Syahputra</h5>
                 <i class="bi bi-instagram fs-4"></i>
               </div>
@@ -166,7 +166,7 @@
           <div class="col d-flex justify-content-center ">
             <div class="card text-center border-0 mb-3 shadow" style="width: 16rem;">
               <div class="card-body">
-                <img src="img/profile.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" alt="">
+                <img src="image/syukron.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" style="object-fit: cover;" alt="">
                 <h5 style="font-weight: 600;" class="card-title mb-3 mt-4">Muhammad Syukron </h5>
                 <i class="bi bi-instagram fs-4"></i>
               </div>
@@ -175,7 +175,7 @@
           <div class="col d-flex justify-content-center ">
             <div class="card text-center border-0 mb-3 shadow" style="width: 16rem;">
               <div class="card-body">
-                <img src="img/profile.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" alt="">
+                <img src="image/dzakwan.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" style="object-fit: cover;" alt="">
                 <h5 style="font-weight: 600;" class="card-title mb-3 mt-4">M. Dzakwan</h5>
                 <i class="bi bi-instagram fs-4"></i>
               </div>
@@ -186,7 +186,7 @@
           <div class="col d-flex justify-content-center ">
             <div class="card text-center border-0 mb-3 shadow" style="width: 16rem;">
               <div class="card-body">
-                <img src="img/profile.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" alt="">
+                <img src="image/timothy.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" style="object-fit: cover;" alt="">
                 <h5 style="font-weight: 600;" class="card-title mb-3 mt-4">Timothy Tanawi</h5>
                 <i class="bi bi-instagram fs-4"></i>
               </div>
@@ -195,7 +195,7 @@
           <div class="col d-flex justify-content-center ">
             <div class="card text-center border-0 mb-3 shadow" style="width: 16rem;">
               <div class="card-body">
-                <img src="img/profile.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" alt="">
+                <img src="image/arman.jpg" class="rounded-circle mb-2 border border-5" width="150px" height="150px" style="object-fit: cover;" alt="">
                 <h5 style="font-weight: 600;" class="card-title mb-3 mt-4">Gerti Armanda </h5>
                 <i class="bi bi-instagram fs-4"></i>
               </div>
